--- a/style.css
+++ b/style.css
@@ -7,3 +7,255 @@ html,body{
     height: 100%;
     width: 100%;
 }
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
+    padding-left: 30px;
+    padding-bottom: 10px;
+}
+nav div{
+    display: flex;
+    gap: 25px;
+}
+nav div p{
+    font-size: 17px;
+    font-weight: 500;
+}
+nav h3{
+    border: 3px solid #e8efff;
+    color: #457bff;
+    background-color: #e8efff;
+    border-radius: 20px;
+    padding: 5px;
+    font-size: 16px;
+}
+hr{
+    color: grey;
+}
+.content{
+    display: flex;
+    padding-top: 50px;
+}
+.left{
+    height: 600px;
+    width: 50%;
+    padding: 60px 15px;
+}
+.left span{
+   margin: 20px;
+    font-size: 17px;
+    word-spacing: 2px;
+    color: #ed7743;
+    border: 1px solid #fdf0ea;
+    background-color: #fdf0ea;
+    padding: 10px 20px;
+    border-radius: 30px;
+}
+.left h1{
+    padding: 25px;
+    font-size: 35px;
+    font-weight: 700;
+}
+.left p{
+    padding:20px 24px;
+    word-spacing: 2px;
+    font-size: 20px;
+}
+.left button{
+    margin: 20px;
+}
+.left .started{
+    padding: 15px;
+    border-radius: 15px;
+    background-color: #457bff;
+    color: white;
+    border: none;
+    font-weight: 500;
+    font-size: 15px;
+}
+.left .work{
+    padding: 15px;
+    background: transparent;
+    border-radius: 20px;
+    font-size: 20px;
+    border: none;
+    box-shadow: 1px 1px 1px black;
+}
+.left img{
+    margin-top:50px ;
+    margin-left: 20px;
+    height: 40px;
+    width: 40px;
+    border-radius: 50px;
+}
+.left h6{
+    padding:10px 20px;
+    font-size: 14px;
+}
+.left h5{
+    color: rgb(249, 249, 3);
+    padding-left:20px ;
+    font-size: 14px;
+}
+.middle{
+    height: 600px;
+    width: 25%;
+}
+.middle .card{
+    height: 550px;
+    width: 100%;
+    background-color: hotpink;
+    border-radius: 24px;
+}
+.middle .card .top{
+    height: 150px;
+    width: 100%;
+    background: linear-gradient(#0a88f5,#6a30d2);
+    border-radius: 24px 24px 0 0;
+    padding: 30px 20px;
+}
+.middle .card .top h3{
+    font-size: 24px;
+    color: white;
+    font-weight: 600;
+}
+.middle .card .top p{
+    padding-top: 10px;
+    color: white;
+}
+.right{
+    height: 600px;
+    width: 22%;
+}
+.right img{
+    height: 400px;
+    width: 370px;
+    margin-top: 100px;
+}
+.page2 h2{
+    text-align: center;
+    font-size: 35px;
+    font-weight: 600;
+    padding: 20px;
+}
+.page2 p{
+    text-align: center;
+    font-size: 19px;
+    color: grey;
+}
+.page2 .pricingcard{
+    display: flex;
+    justify-content: space-evenly;
+    padding-top:60px ;
+}
+.page2  .pricingcardd{
+    height: 800px;
+    width: 20%;
+    border: 2px solid black;
+    padding: 20px;
+}
+.page2 .pricingcardd h3{
+   padding: 15px 0 ;
+   font-size: 22px;
+}
+.page2 .pricingcardd h4{
+    padding: 15px 0;
+    color: grey;
+}
+.page2 .pricingcardd h1{
+    padding: 15px 0;
+}
+.page2 .pricingcardd span{
+    border: 2px solid transparent;
+    background-color: #ffd891;
+    padding: 5px;
+    border-radius: 10px;
+}
+.page2 .pricingcardd h6{
+    padding: 20px 0;
+    color: grey;
+}
+.page2 .pricingcardd button{
+    padding: 10px 70px;
+    background: transparent;
+    margin: 20px;
+    border-radius: 15px;
+}
+.page2 .pricingcardd h5{
+    padding: 20px;
+    color: grey;
+    font-size: 19px;
+    font-weight: 300;
+}
+.page2 .pricingcardd p{
+    text-align: left;
+    color: black;
+    padding: 10px 0;
+}
+.page2 .pricingcardd p i{
+    text-align: left;
+color: rgb(40, 165, 214);
+}
+
+.page3{
+    padding-top: 15%;
+    display: flex;
+}
+.page3 .left{
+    height: 700px;
+    width: 50%;
+}
+.page3 .left h2{
+    padding: 30px;
+}
+.page3 .right{
+    height: 700px;
+    width: 50%;
+    padding-top: 50px;
+}
+.page3 .right h2{
+    padding: 40px;
+}
+.page3 .right p{
+    padding: 0 40px;
+    font-size: 20px;
+}
+.page4 {
+    display: flex;
+}
+.page4 .left{
+    height: 600px;
+    width: 65%;
+}
+.page4 .left h3{
+    padding: 30px;
+    font-size: 25px;
+}
+.page4 .left button{
+    padding: 10px 20px;
+    background-color: #6a95ff;
+    color: white;
+    font-size: 19px;
+    font-weight: 600;
+    border: none;
+    border-radius: 17px;
+}
+.page4 .right{
+    height: 600px;
+    width: 35%;
+}
+footer{
+    display: flex;
+    justify-content: space-between;
+    padding: 30px;
+}
+footer h2{
+    padding: 20px 0;
+}
+footer p{
+    padding: 20px 0;
+}
